Se modifican diagramas de CU, y se modifican algunos CU

--- a/Portada.tex
+++ b/Portada.tex
@@ -25,7 +25,7 @@
 \vspace{1cm}
 \subsubsection*{Resumen:}
 
-Se presenta la metodología del diseño de un sistema que tiene por objetivo proporcionar un mecanismo de conocimiento y soporte geográfico que funcione como un sistema de información geográfica para la puesta en marcha de la actualización del POETY, incorporando el manejo, análisis y visualización de información que facilite la gobernanza colaborativa en el proceso de ordenamiento ecológico de la entidad y su articulación con otros instrumentos de planeación pertinentes.
+Se presenta la metodología del diseño de un sistema que tiene por objetivo diseñar, desarrollar e implementar un sistema de gestión para el ordenamiento ecológico del territorio del estado de Yucatán (Sistema) que funcione como un sistema de información geográfica para la puesta en marcha de la actualización del POETY, para el manejo y análisis  de información que facilite la gobernanza colaborativa en el proceso de ordenamiento ecológico en la entidad y su articulación con otros instrumentos de planeación pertinentes.
 \end{minipage}%
 \hfill
 \begin{minipage}[t]{0.25\textwidth} 
