--- a/gen_cu/EspReque_py.tex
+++ b/gen_cu/EspReque_py.tex
@@ -122,7 +122,7 @@ Los Objetivos del Negocio del proyecto del Sistema de gestión del POETY son:
 \cline{2-2}
 	 & Consultar criterios de regulación por polígono\\	 
 \cline{2-2}
-Modificación del POETY	 & Descargar criterios de regulación por polígono\\	 
+Bitácora del ordenamiento	 & Descargar criterios de regulación por polígono\\	 
 \cline{2-2}
 	 & Descargar criterios de regulación por UGA\\	 
 \cline{2-2}
@@ -137,11 +137,12 @@ Modificación del POETY	 & Descargar criterios de regulación por polígono\\
 	 & Borrar documentos (fichas, u otros)\\
 \cline{2-2}
 	 & Borrar capas \\	
-	 &  Dar de alta recurso de monitoreo \\	
+\hline
+	 & Subir mediciones de campo \\	
 \cline{2-2}
-	 & Actualizar recurso de monitoreo \\		 	  
+	 & Actualizar mediciones de campo \\		 	  
 \cline{2-2}
-	 & Borrar recurso de monitoreo\\	
+Monitoreo y evaluación	 & Borrar mediciones de campo\\	
 \cline{2-2}
 	 & Consultar indicadores del POETY \\	
 \hline
@@ -149,9 +150,9 @@ Modificación del POETY	 & Descargar criterios de regulación por polígono\\
 Obtener un informe sobre los criterios de regulación y los impactos acumulados\\	
 \cline{2-2}
  &
-Dar de alta dictamización de proyecto \\	
+LLenar un formulario cuando se dictamina un proyecto \\	
 \cline{2-2}
-Automatización de reportes	 & Actualizar los datos de un proyecto \\	
+Automatización de reportes	 & Modificar los datos de un proyecto \\	
 \cline{2-2}
 	 & Borrar proyectos en la base de datos de proyectos\\	
 \cline{2-2}
@@ -1643,7 +1644,7 @@ FLUJOS ALTERNOS &
 \hline \\[-1ex]
 
 FLUJOS DE EXCEPCIÓN & 
-\par\vspace{.1cm} (E1). El sistema no puede actualizar el listado de usuarios. El sistema muestra un mensaje al Administrador indicando que no es posible realizar la acción solicitada, pidiendo que lo intente más tarde.
+\par\vspace{.1cm} (E1). El sistema no ṕuede actualizar el listado de usuarios. El sistema muestra un mensaje al Administrador indicando que no es posible realizar la acción solicitada, pidiendo que lo intente más tarde.
 
 \par\vspace{.1cm} (E2) El sistema no puede eliminar o inhabilitar al usuario seleccionado. El sistema muestra un mensaje al Administrador indicando que no es posible realizar la acción solicitada, pidiendo que lo intente más tarde.
 
