Se agregan los diagramas de actividad

--- a/Portada.tex
+++ b/Portada.tex
@@ -29,10 +29,11 @@ Se presenta la metodología del diseño de un sistema que tiene por objetivo dis
 \end{minipage}%
 \hfill
 \begin{minipage}[t]{0.25\textwidth} 
+  \includegraphics[width=52mm]{images/yucatan_logo}\vspace{2cm}
   \includegraphics[width=47mm]{images/UNAM}\vspace{2cm}
   \includegraphics[width=42mm]{images/ie_logo}\vspace{2cm}
-  \includegraphics[width=60mm]{images/lancis_logo}\vspace{2cm}
-  \includegraphics[width=52mm]{images/yucatan_logo}%
+  \includegraphics[width=60mm]{images/lancis_logo}  
+  %
 \end{minipage}
 
 \end{titlepage}
