--- a/gen_cu/EspReque_py.tex
+++ b/gen_cu/EspReque_py.tex
@@ -11,43 +11,43 @@ Los Objetivos del Negocio del proyecto del Sistema de gestión del POETY son:
 \begin{itemize}
 \item Proporcionar un mecanismo de conocimiento y soporte geográfico de decisiones para la gestión del POETY(QUÉ).
 \item Desarrollando un Sistema que permita la gestión del POETY mediante la organización dinámica de información relevante, la simplificación de informes técnicos, al definirse como base para configuración de la bitácora ambiental, así como geovisualizaciones que faciliten los procesos multi-escalares, multitemporales y multi-sectoriales de la transformación territorial y la vulnerabilidad de los ecosistemas al cambio climático. (CÓMO)
-\item Para que las autoridades así como otros actores de la vida pública cuenten con un mecanismo que funcione como un sistema de información geográfica para la puesta en marcha de la actualización del POETY, para el manejo y análisis de información que facilite la gobernanza colaborativa en el proceso de ordenamiento ecológico en la entidad y su articulación con otros instrumentos de planeación pertinentes.(POR QUÉ)
+\item Para que las autoridades así como otros actores de la vida pública cuenten con un mecanismo que funcione como un sistema de información geográfica para la puesta en marcha de la actualización del POETY, para el manejo, análisis y visualización de información que facilite la gobernanza colaborativa en el proceso de ordenamiento ecológico en la entidad y su articulación con otros instrumentos de planeación pertinentes.(POR QUÉ)
 \end{itemize}
 
 \pagebreak
 \subsection{Requerimientos del Sistema}
 
 
-\begin{longtable}{@{\extracolsep{2pt}}l p{7cm} p{5cm}}  
+\begin{longtable}{@{\extracolsep{2pt}}l p{7cm} p{5cm}}
 \caption{Requerimientos del Sistema}\label{item:req_sistema}\\
-\\[-1.8ex]\hline 
+\\[-1.8ex]\hline
 \endhead
-\hline \\[-1.8ex] 
- \multicolumn{1}{c} {\textit{\textbf{Num}}}& {\textit{\textbf{Requerimiento}}} & {\textit{\textbf{Descripción}}}\\ 
-\hline \\[-1ex] 
+\hline \\[-1.8ex]
+ \multicolumn{1}{c} {\textit{\textbf{Num}}}& {\textit{\textbf{Requerimiento}}} & {\textit{\textbf{Descripción}}}\\
+\hline \\[-1ex]
 \\
 1 & Acceso interactivo a bancos de datos de la caracterización ambiental y socio-económica & \\
 \\
-\hline 
+\hline
 \\
 2 & Monitoreo y evaluación pública a través de índices e indicadores del desempeño del ordenamiento ecológico & \\
 \\
-\hline 
+\hline
 \\
 3 & Consulta interactiva de mecanismos de resolución de conflictos del programa de ordenamiento ecológico con base en los criterios, estrategias y lineamientos de regulación ecológico en cada UGA & \\
 \\
-\hline 
+\hline
 \\
 4 & Simplificar la consulta de informes técnicos & \\
 \\
-\hline 
+\hline
 \\
 5 & Permitir la realización de procedimientos de geovisualización que incluyan como mínimo manejo de bancos de datos, manejo de modelos de análisis, generador de reportes gráficos y tabulares e interfaces de operación & \\
 \\
-\hline 
-\hline \\[-1.8ex] 
-  \\ 
-\end{longtable} 
+\hline
+\hline \\[-1.8ex]
+  \\
+\end{longtable}
 
 \subsection{Beneficios}
 
@@ -58,7 +58,7 @@ Los Objetivos del Negocio del proyecto del Sistema de gestión del POETY son:
 
 \subsection{Priorización de Requerimientos}
 
-\newgeometry{hmargin=.4in,vmargin=0.1in} 
+\newgeometry{hmargin=.4in,vmargin=0.1in}
 
 \uselandscape
 \begin{figure}[h]
@@ -95,79 +95,90 @@ Los Objetivos del Negocio del proyecto del Sistema de gestión del POETY son:
 \useportrait
 \restoregeometry
 
+
+
 \subsection{Descripción de Módulos y Casos de Uso}
 
 
-\begin{longtable}{@{\extracolsep{6pt}}l p{7.5cm}}  
+\begin{longtable}{@{\extracolsep{6pt}}l p{7.5cm}}
 \caption{Módulos y Casos de Uso}\label{item:mod_cu}\\
-\\[-1.8ex]\hline 
+\\[-1.8ex]\hline
 \endhead
-\hline \\[-1.8ex] 
- \multicolumn{1}{c} {\textit{\textbf{Módulo}}} & {\textit{\textbf{Casos de Uso}}} \\ 
-\hline \\[-1ex] 
+\hline \\[-1.8ex]
+ \multicolumn{1}{c} {\textit{\textbf{Módulo}}} & {\textit{\textbf{Casos de Uso}}} \\
+\hline \\[-1ex]
 
   & Consultar fichas de UGAs\\
 \cline{2-2}
-	 & Consultar fichas de UGAs\\
-\cline{2-2}
 	 & Descargar ficha de UGA\\
 \cline{2-2}
-	 & Consultar capas de insumo para el ordenamiento\\	 
+	 & Consultar capas de insumo para el ordenamiento\\
 \cline{2-2}
 	 & Consultar mapas de aptitud\\
 \cline{2-2}
+   & Descargar capas\\
+\cline{2-2}
 	 & Consultar mapas de UGAs\\
 \cline{2-2}
-	 & Consultar documentos relacionados con la formulación del POETY\\	 
+	Consultas y descargas & Consultar documentos relacionados con la formulación del POETY\\
 \cline{2-2}
-	 & Consultar criterios de regulación por polígono\\	 
+   & Consultar documentos del POETY por búsqueda\\
 \cline{2-2}
-Bitácora del ordenamiento	 & Descargar criterios de regulación por polígono\\	 
+   & Consultar documentos del POETY por orden cronológico\\
 \cline{2-2}
-	 & Descargar criterios de regulación por UGA\\	 
+   & Consultar documentos del POETY por tipo\\
 \cline{2-2}
-	 & Subir documentos (fichas, u otros)\\	 
+   & Descargar documento\\
 \cline{2-2}
-	 & Subir capas \\	 
+	 & Consultar criterios de regulación por polígono\\
 \cline{2-2}
-	 & Actualizar documentos (fichas, u otros)\\	 
+   & Descargar criterios de regulación por polígono\\
 \cline{2-2}
-	 & Actualizar capas \\	 
+	 & Descargar criterios de regulación por UGA\\
+\cline{2-2}
+   & Consultar indicadores del POETY \\
+\hline
+\cline{2-2}
+	 & Dar de alta documentos (fichas, u otros)\\
+\cline{2-2}
+	 & Dar de alta capas \\
+\cline{2-2}
+	 & Actualizar documentos (fichas, u otros)\\
+\cline{2-2}
+	Actualización de recursos & Actualizar capas \\
 \cline{2-2}
 	 & Borrar documentos (fichas, u otros)\\
 \cline{2-2}
-	 & Borrar capas \\	
+	 & Borrar capas \\
+\cline{2-2}
+	 & Dar de alta recursos de monitoreo \\
+\cline{2-2}
+	 & Actualizar recursos de monitoreo \\
+\cline{2-2}
+   & Borrar recursos de monitoreo\\
 \hline
-	 & Subir mediciones de campo \\	
-\cline{2-2}
-	 & Actualizar mediciones de campo \\		 	  
-\cline{2-2}
-Monitoreo y evaluación	 & Borrar mediciones de campo\\	
-\cline{2-2}
-	 & Consultar indicadores del POETY \\	
-\hline
-	 & 
-Obtener un informe sobre los criterios de regulación y los impactos acumulados\\	
+	 &
+Obtener un informe sobre los criterios de regulación y los impactos acumulados\\
 \cline{2-2}
  &
-LLenar un formulario cuando se dictamina un proyecto \\	
+LLenar un formulario cuando se dictamina un proyecto \\
 \cline{2-2}
-Automatización de reportes	 & Modificar los datos de un proyecto \\	
+Automatización de reportes	 & Modificar los datos de un proyecto \\
 \cline{2-2}
-	 & Borrar proyectos en la base de datos de proyectos\\	
+	 & Borrar proyectos en la base de datos de proyectos\\
 \cline{2-2}
-	 & Obtener información externa y cruzarla con un polígono de interés \\	
+	 & Obtener información externa y cruzarla con un polígono de interés \\
 \hline
-	 &Dar de alta usuario interno de SDS \\	
+	 &Dar de alta usuario interno de SDS \\
 \cline{2-2}
-Módulo de administración	 & Dar de baja usuario interno de SDS  \\	
+Módulo de administración	 & Dar de baja usuario interno de SDS  \\
 \cline{2-2}
-	 & Modificar datos de usuarios internos de SDS\\	
- 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 
-\hline 
-\hline \\[-1.8ex] 
-  \\ 
-\end{longtable} 
+	 & Modificar datos de usuarios internos de SDS\\
+
+\hline
+\hline \\[-1.8ex]
+  \\
+\end{longtable}
 
 \pagebreak
 \subsection{Casos de Uso}
@@ -190,7 +201,12 @@ Módulo de administración	 & Dar de baja usuario interno de SDS  \\
 \hline \\[-1ex]
 ID. DEL CU&  0 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Usuario externo
+
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El usuario selecciona la UGA en el mapa, solicita la ficha de esa UGA y el sistema despliega la visualización de la ficha \\
 \hline \\[-1ex]
@@ -217,9 +233,9 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} (A1) El usuario solicita la descarga de la ficha (CU1)
+\par (A1) El usuario solicita la descarga de la ficha (CU1)
 
-\par\vspace{.1cm} (A2) El usuario solicita la descarga de los criterios de regulación por UGA (CU13)
+\par (A2) El usuario solicita la descarga de los criterios de regulación por UGA (CU13)
 
 
 
@@ -235,7 +251,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -259,7 +275,12 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  1 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Usuario externo
+
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El usuario descarga la ficha técnica de una unidad de gestión ambiental  \\
 \hline \\[-1ex]
@@ -298,7 +319,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -322,7 +343,12 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  2 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Usuario externo
+
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El usuario consulta las capas de insumo que conforman el mapa de aptitud de un sector específico  \\
 \hline \\[-1ex]
@@ -351,7 +377,7 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} (A1) El usuario descarga la capa de insumo (CU4)
+\par (A1) El usuario descarga la capa de insumo (CU4)
 
 
 
@@ -367,7 +393,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -391,7 +417,12 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  3 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Usuario externo
+
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El usuario visualiza el mapa de aptitud por sector  \\
 \hline \\[-1ex]
@@ -416,7 +447,7 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} (A1) El usuario visualiza las capas de insumo (CU2)
+\par (A1) El usuario visualiza las capas de insumo (CU2)
 
 
 
@@ -432,7 +463,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -456,7 +487,12 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  4 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Usuario externo
+
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El usuario descarga la capa visualizada  \\
 \hline \\[-1ex]
@@ -477,7 +513,7 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} NA 
+\par NA 
 
 
 
@@ -493,7 +529,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -517,7 +553,12 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  5 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Usuario externo
+
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El usuario visualiza las unidades de gestión ambiental \\
 \hline \\[-1ex]
@@ -540,7 +581,7 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} (A1) El usuario solicita la descarga de la capa de las ugas (CU4)
+\par (A1) El usuario solicita la descarga de la capa de las ugas (CU4)
 
 
 
@@ -556,7 +597,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -580,7 +621,12 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  6 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Usuario externo
+
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El usuario consulta cualquier documento relacionado con la formulación del POETY (por búsqueda, por orden cronológico, por categoría) \\
 \hline \\[-1ex]
@@ -601,7 +647,7 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} NA
+\par NA
 
 
 
@@ -617,7 +663,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -641,7 +687,12 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  7 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Usuario externo
+
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El usuario consulta un documento relacionado con la formulación del POETY por búsqueda de palabra(s) clave(s) \\
 \hline \\[-1ex]
@@ -670,7 +721,7 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} (A1) El usuario solicita la descarga del documento (CU10)
+\par (A1) El usuario solicita la descarga del documento (CU10)
 
 
 
@@ -686,7 +737,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -710,7 +761,12 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  8 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Usuario externo
+
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El usuario consulta un documento relacionado con la formulación del POETY por orden cronológico \\
 \hline \\[-1ex]
@@ -737,7 +793,7 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} (A1) El usuario solicita la descarga del documento (CU10)
+\par (A1) El usuario solicita la descarga del documento (CU10)
 
 
 
@@ -753,7 +809,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -777,7 +833,12 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  9 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Usuario externo
+
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El usuario consulta un documento relacionado con la formulación del POETY por tipo \\
 \hline \\[-1ex]
@@ -808,7 +869,7 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} (A1) El usuario solicita la descarga del documento (CU10)
+\par (A1) El usuario solicita la descarga del documento (CU10)
 
 
 
@@ -824,7 +885,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -848,7 +909,12 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  10 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Usuario externo
+
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & EL usuario descarga el documento relacionado con la formulación del POETY \\
 \hline \\[-1ex]
@@ -879,7 +945,7 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} NA
+\par NA
 
 
 
@@ -895,7 +961,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -919,7 +985,12 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  11 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Usuario externo
+
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El usuario consulta los criterios de regulación que aplican en un área de interés \\
 \hline \\[-1ex]
@@ -942,7 +1013,7 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} (A1) El usuario solicita la descarga de los criterios de regulación (CU12)
+\par (A1) El usuario solicita la descarga de los criterios de regulación (CU12)
 
 
 
@@ -960,7 +1031,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -984,7 +1055,12 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  12 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Usuario externo
+
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El usuario descarga la lista de criterios de regulación \\
 \hline \\[-1ex]
@@ -1009,7 +1085,7 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} NA
+\par NA
 
 
 
@@ -1025,7 +1101,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -1049,7 +1125,12 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  13 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Usuario externo
+
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El usuario descarga los criterios de regulación que aplican en una unidad de gestión ambiental \\
 \hline \\[-1ex]
@@ -1076,7 +1157,7 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} NA
+\par NA
 
 
 
@@ -1092,7 +1173,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -1116,7 +1197,12 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  14 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par 
+
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El usuario sube un documento relacionado con la formulación del POETY o una ficha de UGA		
 		
@@ -1145,7 +1231,7 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} NA 
+\par NA 
 
 
 
@@ -1161,7 +1247,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -1185,7 +1271,12 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  16 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par 
+
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El usuario actualiza un documento relacionado con la formulación del POETY o una ficha de UGA \\
 \hline \\[-1ex]
@@ -1212,7 +1303,7 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} NA
+\par NA
 
 
 
@@ -1228,7 +1319,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -1238,21 +1329,26 @@ POST-CONDICIONES &
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%% CU: Subir capas
+%%%%%% CU: Dar de alta capas
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 
 \begin{longtable}{@{\extracolsep{8pt}}l p{8.5cm}}
-\caption{Caso de uso: Subir capas }\label{item: subir_capas }\\
+\caption{Caso de uso: Dar de alta capas }\label{item: dar_de_alta_capas }\\
 \\[-1.8ex]\hline
 \endhead
 \hline \\[-1.8ex]
- \multicolumn{1}{c} {\textit{\textbf{CASO DE USO}}}& {\textit{\textbf{ Subir capas }}} \\
+ \multicolumn{1}{c} {\textit{\textbf{CASO DE USO}}}& {\textit{\textbf{ Dar de alta capas }}} \\
 \hline \\[-1ex]
 ID. DEL CU&  15 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par 
+
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El usuario sube una capa \\
 \hline \\[-1ex]
@@ -1281,7 +1377,7 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} NA
+\par NA
 
 
 
@@ -1299,7 +1395,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -1323,7 +1419,10 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  17 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El usuario actualiza una capa \\
 \hline \\[-1ex]
@@ -1350,7 +1449,7 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} NA
+\par NA
 
 
 
@@ -1368,7 +1467,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -1392,7 +1491,12 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  18 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par 
+
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El usuario borra un documento relacionado con la formulación del POETY o una ficha de UGA \\
 \hline \\[-1ex]
@@ -1423,7 +1527,7 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} NA
+\par NA
 
 
 
@@ -1439,7 +1543,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -1463,7 +1567,12 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  19 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par 
+
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El usuario borra una capa \\
 \hline \\[-1ex]
@@ -1490,7 +1599,7 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} NA
+\par NA
 
 
 
@@ -1506,7 +1615,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -1530,7 +1639,12 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  20 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Usuario de interno
+
+\par - Sistema interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El caso de uso describe el proceso de registro de un nuevo usuario de la SDS en el sistema. Los datos del usuario deben ser verificados en el sistema de la SDS para que el usuario sea registrado. \\
 \hline \\[-1ex]
@@ -1563,11 +1677,11 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} (A1) Si el trabajador no se encuentra activo, el sistema se lo informa y el proceso termina.
+\par (A1) Si el trabajador no se encuentra activo, el sistema se lo informa y el proceso termina.
 
-\par\vspace{.1cm} (A2) Si un usuario ya ha sido dado de alta con ese número de trabajador, el sistema se lo informa y el proceso termina.
+\par (A2) Si un usuario ya ha sido dado de alta con ese número de trabajador, el sistema se lo informa y el proceso termina.
 
-\par\vspace{.1cm} (A3) Si el nombre de usuario coincide con uno que ya ha sido registrado, el sistema se lo informa al usuario, indicando que tiene que cambiarlo. 
+\par (A3) Si el nombre de usuario coincide con uno que ya ha sido registrado, el sistema se lo informa al usuario, indicando que tiene que cambiarlo. 
 
 
 
@@ -1583,7 +1697,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -1607,7 +1721,10 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  21 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Administrador
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El caso de uso describe el proceso de baja del sistema de un usuario interno de la SDS. \\
 \hline \\[-1ex]
@@ -1636,7 +1753,7 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} (A1). En caso contrario, el sistema regresa al Administrador a su interfaz de Administrador.
+\par (A1). En caso contrario, el sistema regresa al Administrador a su interfaz de Administrador.
 
 
 
@@ -1654,7 +1771,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -1678,7 +1795,10 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  22 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Administrador
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El caso de uso describe el proceso en el que el administrador modifica los datos de un usuario y se guardan los cambios. \\
 \hline \\[-1ex]
@@ -1705,7 +1825,7 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} (A1) El usuario solicita al sistema que se cancelen los cambios hechos. El sistema descarta los cambios a los detalles del usuario seleccionado
+\par (A1) El usuario solicita al sistema que se cancelen los cambios hechos. El sistema descarta los cambios a los detalles del usuario seleccionado
 
 
 
@@ -1725,7 +1845,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -1749,7 +1869,10 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  23 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par -Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El usuario interno de la SDS incorpora recursos propios del monitoreo \\
 \hline \\[-1ex]
@@ -1778,9 +1901,9 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} (A1) En caso de no contar con credenciales, ver caso de uso Dar de alta usuario.
+\par (A1) En caso de no contar con credenciales, ver caso de uso Dar de alta usuario.
 
-\par\vspace{.1cm} (A2) En caso contrario, el usuario sale del proceso.
+\par (A2) En caso contrario, el usuario sale del proceso.
 
 
 
@@ -1796,7 +1919,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -1820,7 +1943,10 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  24 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El funcionario actualiza un recurso de monitoreo \\
 \hline \\[-1ex]
@@ -1849,9 +1975,9 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} (A1) En caso de no contar con credenciales, ver caso de uso Dar de alta usuario.
+\par (A1) En caso de no contar con credenciales, ver caso de uso Dar de alta usuario.
 
-\par\vspace{.1cm} (A2) En caso contrario, el usuario sale del proceso.
+\par (A2) En caso contrario, el usuario sale del proceso.
 
 
 
@@ -1867,7 +1993,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -1891,7 +2017,10 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  25 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El usuario interno de la SDS elimina un recurso de monitoreo
  \\
@@ -1921,9 +2050,9 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} (A1) En caso de no contar con credenciales, ver caso de uso Dar de alta usuario.
+\par (A1) En caso de no contar con credenciales, ver caso de uso Dar de alta usuario.
 
-\par\vspace{.1cm} (A2) En caso contrario, el usuario sale del proceso.
+\par (A2) En caso contrario, el usuario sale del proceso.
 
 
 
@@ -1939,7 +2068,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -1963,7 +2092,12 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  26 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Usuario externo
+
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El usuario  consulta indicadores del POETY.
  \\
@@ -1991,7 +2125,7 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} (A1) En caso contrario, el usuario sale del proceso.
+\par (A1) En caso contrario, el usuario sale del proceso.
 
 
 
@@ -2007,7 +2141,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -2031,7 +2165,12 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  27 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Usuario externo
+
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El usuario  obtiene informes sobre los criterios de regulación y los impactos acumulados. \\
 \hline \\[-1ex]
@@ -2060,7 +2199,7 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} (A1) En caso contrario, el usuario sale del proceso.
+\par (A1) En caso contrario, el usuario sale del proceso.
 
 
 
@@ -2076,7 +2215,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -2100,7 +2239,10 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  28 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El usuario interno dictamina un proyecto.
  \\
@@ -2132,9 +2274,9 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} (A1) En caso de no contar con credenciales, ver caso de uso Dar de alta usuario.
+\par (A1) En caso de no contar con credenciales, ver caso de uso Dar de alta usuario.
 
-\par\vspace{.1cm} (A2) En caso contrario, el usuario sale del proceso.
+\par (A2) En caso contrario, el usuario sale del proceso.
 
 
 
@@ -2150,7 +2292,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -2174,7 +2316,10 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  29 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El funcionario modifica los datos de un proyecto en el sistema.
  \\
@@ -2206,9 +2351,9 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} (A1) En caso de no contar con credenciales, ver caso de uso Dar de alta usuario.
+\par (A1) En caso de no contar con credenciales, ver caso de uso Dar de alta usuario.
 
-\par\vspace{.1cm} (A2) En caso contrario, el usuario sale del proceso.
+\par (A2) En caso contrario, el usuario sale del proceso.
 
 
 
@@ -2224,7 +2369,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -2248,7 +2393,12 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  30 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par 
+
+\par - Usuario interno
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & El funcionario elimina la información de un proyecto.
  \\
@@ -2276,9 +2426,9 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} (A1) En caso de no contar con credenciales, ver caso de uso Dar de alta usuario.
+\par (A1) En caso de no contar con credenciales, ver caso de uso Dar de alta usuario.
 
-\par\vspace{.1cm} (A2) En caso contrario, el usuario sale del proceso.
+\par (A2) En caso contrario, el usuario sale del proceso.
 
 
 
@@ -2294,7 +2444,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -2318,7 +2468,12 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  32 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Administrador
+
+\par - Usuario interno de la SDS
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & 
 El usuario realiza una solicitud y se valida su identidad \\
@@ -2338,13 +2493,13 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} (A1) El usuario no se encuentra autenticado: A) Se le solicita al usuario que se autentique para poder acceder.
+\par (A1) El usuario no se encuentra autenticado: A) Se le solicita al usuario que se autentique para poder acceder.
 
-\par\vspace{.1cm} B) Se redirige al usuario a la pantalla de autenticación (Ver caso de uso: Autenticar usuario)
+\par B) Se redirige al usuario a la pantalla de autenticación (Ver caso de uso: Autenticar usuario)
 
-\par\vspace{.1cm} (A2) El usuario autenticado no cuenta con los permisos requeridos para acceder al recurso solicitado: A) Se le indica al usuario que no tiene permisos suficientes.
+\par (A2) El usuario autenticado no cuenta con los permisos requeridos para acceder al recurso solicitado: A) Se le indica al usuario que no tiene permisos suficientes.
 
-\par\vspace{.1cm} B) Se redirige al usuario a la pantalla de autenticación (Ver caso de uso: Autenticar usuario)
+\par B) Se redirige al usuario a la pantalla de autenticación (Ver caso de uso: Autenticar usuario)
 
 
 
@@ -2358,7 +2513,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
@@ -2382,7 +2537,12 @@ POST-CONDICIONES &
 \hline \\[-1ex]
 ID. DEL CU&  33 \\
 \hline\\[-1ex]
-ACTORES PARTICIPANTES & Usuario interno de SDS\\
+ACTORES PARTICIPANTES & 
+\par - Administrador
+
+\par - Usuario Interno de la SDS
+
+\\
 \hline \\[-1ex]
 BREVE DESCRIPCIÓN & 
 El usuario ingresa sus credenciales para autenticar su identidad \\
@@ -2404,7 +2564,7 @@ FLUJO PRINCIPAL &
 \hline \\[-1ex]
 
 FLUJOS ALTERNOS & 
-\par\vspace{.1cm} (A1) Las credenciales proporcionadas son incorrectas. Se informa al usuario y se le solicitan nuevamente sus credenciales.
+\par (A1) Las credenciales proporcionadas son incorrectas. Se informa al usuario y se le solicitan nuevamente sus credenciales.
 
 
 
@@ -2418,7 +2578,7 @@ FLUJOS DE EXCEPCIÓN &
 \hline \\[-1ex]
 POST-CONDICIONES & 
 \\
-\hline 
+\hline
 \hline \\[-1.8ex]
  \\
 \end{longtable}
